pkg/provider/kubernetes/ingress-nginx/fixtures/ingresses/ingress-with-default-backend-per-host-custom-headers.yml
---
kind: Ingress
apiVersion: networking.k8s.io/v1
metadata:
  name: ingress-with-default-backend-per-host-custom-headers
  namespace: default
  annotations:
    nginx.ingress.kubernetes.io/custom-headers: default/custom-headers-configmap

spec:
  ingressClassName: nginx
  defaultBackend:
    service:
      name: whoami
      port:
        number: 80
  rules:
    - host: whoami.localhost
      http:
        paths:
          - path: /foo
            pathType: Exact
            backend:
              service:
                name: whoami
                port:
                  number: 80

---
kind: ConfigMap
apiVersion: v1
metadata:
  name: custom-headers-configmap
  namespace: default
data:
  X-Custom-Header: "some-random-string"
